# RLAI

./: .gitignore  .pre-commit-config.yaml  .tmuxinator.yaml  README.md  balance_data.py  collect.py  collect_training_data.py  controller_input.py  eval.py  eval_debug.py  evaluate_model.py  getkeys.py  grabscreen.py  keytesting.py  main.py  main_old.py  models.py  playback.py  playback_training_data.py  possible_combinations.py  pyproject.toml  requirements.txt  sandbox.py  shuffle_data.py  test_controller.py  test_model.py  train.py  train_model.py  utils.py
cv2_testing/: cv2_window_checker.py
rl_utils/: __init__.py  apply_inputs.py  controller_input_testing.py  controller_reader.py  cv2_keyfinder.py  data_batcher.py  get_current_frame.py  get_current_inputs.py  get_current_window.py  getkeys.py  model.py  models.py  shuffle_data.py  utils.py  viewfinder.py
