[project]
name = "rlai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "evdev>=1.9.0",
    "h5py>=3.12.1",
    "mss>=10.0.0",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.12",
    "matplotlib>=3.10.0",
    "pyqt6>=6.8.1",
    "standard-imghdr>=3.13.0",
]
